# Esterv.Utils.QrCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
.github/workflows/: build-docs.yml  build-test-install.yml  code-format.yml  codeFormat.yml
QrDec/: CMakeLists.txt  Config.cmake.in  README.md  qrcodedec.cpp
QrDec/include/: qrcodedec.hpp
QrDec/include/esterv/utils/: qrcode_dec.hpp
QrDec/src/: qrcode_dec.cpp  qrcodedec.cpp
QrDec/tests/: CMakeLists.txt  load_from_file.cpp
QrGen/: CMakeLists.txt  Config.cmake.in  README.md
QrGen/include/esterv/utils/: qrcode_gen.hpp
QrGen/src/: qrcode_gen.cpp  qrcodegen.cpp  utils.cpp
QtQrDec/: CMakeLists.txt  Qrimagedecoder.cpp  README.md
QtQrDec/examples/: CMakeLists.txt  Qrcam.cpp  Qrtext.cpp  qrcam.cpp  qrtext.cpp
QtQrDec/examples/qml/: Qrcam.qml  Qrtext.qml  qrcam.qml  qrtext.qml
QtQrDec/include/: Qrimagedecoder.hpp
QtQrDec/include/esterv/utils/: qr_image_decoder.hpp  qrimagedecoder.hpp
QtQrDec/qml/: QrCam.qml  QrDecPop.qml  QrQmlCamera.qml  QrTextArea.qml  QrTextCamPop.qml  QrTextField.qml
QtQrDec/qml/wasm/: QrQmlCamera.qml
QtQrDec/src/: qr_image_decoder.cpp  qrimagedecoder.cpp
QtQrDec/tests/: CMakeLists.txt  main.qml  test.cpp
QtQrGen/: CMakeLists.txt  Config.cmake.in  Qrimageprovider.cpp  README.md
QtQrGen/examples/: CMakeLists.txt  Image.cpp  Text.cpp  image.cpp  text.cpp
QtQrGen/examples/qml/: Image.qml  Text.qml  image.qml
QtQrGen/frag/: qrscanner.frag
QtQrGen/include/: Qrimageprovider.hpp
QtQrGen/include/esterv/utils/: qr_image_provider.hpp
QtQrGen/qml/: AddressQr.qml  PayQrPop.qml  QrGenImage.qml  QrGenPop.qml  QrLabel.qml  QrText.qml
QtQrGen/src/: qr_image_provider.cpp
qrGen/: CMakeLists.txt  Config.cmake.in
qrGen/include/: qrcodegen.hpp
qrGen/src/: utils.cpp
