add_library(qrGen src/qrcodegen.cpp src/utils.cpp)
add_library(Esterv::qrGen ALIAS qrGen)

set_target_properties(qrGen PROPERTIES POSITION_INDEPENDENT_CODE ON)

set_target_properties(qrGen PROPERTIES VERSION ${VERSION} SOVERSION ${VERSION_MAJOR})

target_include_directories(qrGen PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	"$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")

install(TARGETS qrGen
	EXPORT ${PROJECT_NAME}-config
	DESTINATION ${CMAKE_INSTALL_LIBDIR}
	COMPONENT EstervQrGen
	RUNTIME COMPONENT EstervQrGen
        ARCHIVE COMPONENT ${PROJECT_NAME}-dev
	)
install(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    COMPONENT ${PROJECT_NAME}-dev)
